--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -79,7 +79,7 @@
                             <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="iletişim.html">İletişim</a>
+                            <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -141,9 +141,11 @@
     </div>
     <div class="container" style="display: flex; margin-top:-70px;">
         <div class="content" style="justify-content: center; margin-top: 130px;">
-         <div class="container" style="display: flex; justify-content: center;">
-            <p style="align-items:self-start;"><b>Gösterim Videosu</b></p>                    
-            <video src="resim/"></video>
+         <div class="container" style="display: flex; justify-content: center;"> 
+            <div class="container" style="align-items: center; "><b><i>Tanıtım Videosu =></i></b></div>               
+            <div class="ratio ratio-16x9">   
+                <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" title="YouTube video" allowfullscreen></iframe>
+              </div>
         </div>
             <b>Misyon Açıklaması:</b>
             <p>
@@ -235,7 +237,6 @@
                 <li class="page-item"><a class="page-link" href="korku.html">2</a></li>
                 <li class="page-item"><a class="page-link" href="macera.html">3</a></li>
                 <li class="page-item"><a class="page-link" href="yarıs.html">4</a></li>
-                <li class="page-item">
                     <a class="page-link" href="aksiyon.html">sonraki</a>
                 </li>
             </ul>
