--- a/iletişim.html
+++ b/iletişim.html
@@ -88,7 +88,7 @@
                             <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="iletişim.html">İletişim</a>
+                            <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -141,7 +141,7 @@
                 <form class="" id="contact"
                     style="font-family:Roboto, Helvetica, Arial, sans-serif; color: #3a3a3a; background: #c7c7c7;">
                     <h2 style="text-align: center;"><a href="iletişim.html"
-                            style="text-decoration: none; color:#3a3a3a;">İletişim Sayfası</a></h2>
+                            style="text-decoration: none; color:#3a3a3a;">Destek Ve İletişim Formu</a></h2>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                         <label for="floatingInput">Adınız Soyadınız</label>
