--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="iletişim.html">İletişim</a>
+                <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -127,7 +127,7 @@
     <!--İlk Katman İçerik -->
     <div class="container mt-5" style="display: flex; justify-content: center;">
       <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-        <img src="resim/god of war.jpg" class="card-img-top" alt="...">
+        <img src="resim/god of war.jpg" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">God Of War</h5>
           <p class="card-text">Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur</p>
@@ -136,7 +136,7 @@
       </div>
 
       <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-        <img src="resim/valhala (1).jpg" class="card-img-top" alt="...">
+        <img src="resim/valhala (1).jpg" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Assasin Creed Valhala</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -147,7 +147,7 @@
 
 
       <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-        <img src="resim/resident evil.jpg" class="card-img-top" alt="...">
+        <img src="resim/resident evil.jpg" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Resident Evil Village</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -157,7 +157,7 @@
       </div>
 
       <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-        <img src="resim/calisto.jpg" class="card-img-top" alt="...">
+        <img src="resim/calisto.jpg" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Calisto Protocol</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -171,7 +171,7 @@
     <!-- ikinci katman içerik -->
     <div class="container mt-5" style="display: flex;">
       <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-        <img src="resim/rdr2.jpg" class="card-img-top" style="background-color: gray;" alt="...">
+        <img src="resim/rdr2.jpg" class="card-img-top" style="background-color: gray;">
         <div class="card-body">
           <h5 class="card-title">Red Dead Redemption 2</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -182,7 +182,7 @@
 
 
       <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-        <img src="resim/alien.jpg" class="card-img-top" alt="...">
+        <img src="resim/alien.jpg" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Alien:İsolation</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -192,7 +192,7 @@
       </div>
 
       <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-        <img src="resim/doom ethernal.jpg" class="card-img-top" alt="...">
+        <img src="resim/doom ethernal.jpg" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Doom Ethernal</h5>
           <p class="card-text">Doom 3'ten (2004) bu yana serideki ilk büyük yapıttır.</p>
@@ -201,7 +201,7 @@
       </div>
 
       <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-        <img src="resim/call of duty.jpg" class="card-img-top" alt="...">
+        <img src="resim/call of duty.jpg" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Call of Duty</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -215,7 +215,7 @@
   <!-- Üçünçü Katman İçerik -->
   <div class="container mt-5" style="display: flex;">
     <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-      <img src="resim/uncharted.jpg" class="card-img-top" style="background-color: gray;" alt="...">
+      <img src="resim/uncharted.jpg" class="card-img-top" style="background-color: gray;">
       <div class="card-body">
         <h5 class="card-title">Uncharted 4</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -226,7 +226,7 @@
 
 
     <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-      <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
+      <img src="resim/need for speed.jpg" class="card-img-top">
       <div class="card-body">
         <h5 class="card-title">Need For Speed:Heat</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -237,7 +237,7 @@
 
 
     <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-      <img src="resim/mario.jpg" class="card-img-top" alt="...">
+      <img src="resim/mario.jpg" class="card-img-top">
       <div class="card-body">
         <h5 class="card-title">Mario Kart 8 Deluxe</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
