--- a/korku.html
+++ b/korku.html
@@ -8,6 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      body{
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-image: url(resim/elden\ ring.jpg);
+        background-attachment: fixed;
+      }
+    </style>
 </head>
 <body>
     <div class="sayfa">
@@ -36,7 +44,7 @@
                                 <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="iletişim.html">İletişim</a>
+                                <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -120,7 +128,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/until dawn.jpg" class="card-img-top" alt="...">
+                <img src="resim/until dawn.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Until dawn</h5>
                   <p class="card-text">Until Dawn, tıpkı Alan Wake gibi dizi şeklinde ilerliyor ve her bölümün sonunda psikoloğun odasında uyanıyoruz. Burada psikolog bize, yani konsol başında oturan oyuncuya sesleniyor. İstediğiniz kadar kıvranın en nihayetinde hayatımız ikili seçimler arasında boğulmaktan ibarettir.</p>
@@ -130,7 +138,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/outlast.jpg" class="card-img-top" alt="...">
+                <img src="resim/outlast.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Outlast</h5>
                   <p class="card-text">Oyunda, Miles Upshur adındaki bir serbest çalışan gazetecinin Lake County, Colorado dağlarının derinliklerinde bulunan Mount Massive Asylum isimli garip olaylar olduğu konuşulan bir akıl hastanesini haber yapmak için bir el kamerası ile tek başına girdikten sonra yaşadığı olaylar oynanmaktadır.</p>
@@ -140,7 +148,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/resident evil.jpg" class="card-img-top" alt="...">
+                <img src="resim/resident evil.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Resident Evil Village</h5>
                   <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler.</p>
@@ -156,7 +164,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/dead space.jpg" class="card-img-top" alt="...">
+                <img src="resim/dead space.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Dead Space</h5>
                   <p class="card-text">13 Ekim 2008 tarihinde PlayStation 3 ve Xbox 360 oyun platformları, daha sonra 20 Ekim 2008 tarihinde de PC platformu için yayınlanmıştır. Oyunun yapımcılığını Electronic Arts: Redwood Shores firması üstlenmiştir. </p>
@@ -166,7 +174,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/alien.jpg" class="card-img-top" alt="...">
+                <img src="resim/alien.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Alien:İsolation</h5>
                   <p class="card-text">Annesinden uzun zamandır haber alamayan Amanda, karşısına çıkan ilk ipucunu takip ediyor ve devasa boyuttaki uzay gemisi Sevastopol'a giriş yapıyor. Ama ne giriş! Daha ilk dakikada tüm işler berbat oluyor ve yaşamla ölüm arasındaki gerilim dolu bir maceranın içinde buluyoruz kendimizi.</p>
@@ -176,7 +184,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/outlast2 (1).jpg" class="card-img-top" alt="...">
+                <img src="resim/outlast2 (1).jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Outlast 2</h5>
                   <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler. Chris Redfield, önceki Resident Evil oyunlarının kahramanı, bir anda ortaya çıkar ve huzurlu yaşamlarını bozarak harap olmuş Ethan Winters'ın kendisini Avrupa'da gizemli bir köyde bulmasına yol açar ve Ethan'ı yeni bir kabusun içine sürükler.</p>
@@ -192,7 +200,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/alan wake (1).jpg" class="card-img-top" alt="...">
+                <img src="resim/alan wake (1).jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Alan Wake</h5>
                   <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler. </p>
@@ -202,7 +210,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/dying light.jpg" class="card-img-top" alt="...">
+                <img src="resim/dying light.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Dying Light</h5>
                   <p class="card-text">Gizli GRE ajanı Kyle Crane, şantaj için kullanan Kadir Süleyman tarafından çalınan hassas bir dosyayı almak için Harran'a havadan bırakılır. Crane, enfekte bir kişi tarafından ısırılır, ancak Jade Aldemir tarafından kurtarılır ve Kule adı verilen hayatta kalan bir sığınağa götürülür.</p>
@@ -212,7 +220,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/days gone.jpg" class="card-img-top" alt="...">
+                <img src="resim/days gone.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Days Gone</h5>
                   <p class="card-text">Küresel bir salgının başlamasından iki yıl sonra kıyamet sonrası Oregon'da geçen oyunda eski kanun kaçağı Deacon St. John, karısı Sarah'nın hala hayatta olma olasılığını keşfeder ve bu da Deacon'ı onu bulmak için bir arayışa sokar.</p>
