--- a/macera.html
+++ b/macera.html
@@ -8,6 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      body{
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        background-image: url(resim/elden\ ring.jpg);
+      }
+    </style>
 </head>
 <body>
     <div class="sayfa">
@@ -36,7 +44,7 @@
                                 <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="iletişim.html">İletişim</a>
+                                <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -119,7 +127,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/horizon.jpg" class="card-img-top" alt="...">
+                <img src="resim/horizon.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Horizon Zero Dawn</h5>
                   <p class="card-text">Oyunun açılış sahnesinde, kabileden sürülmüş bir adam (Rost) tarafından bulunan bir bebeğin kabile analarına götürüldüğünü ve burada çocuğa ad verildiğini görüyoruz. Bu sevimli kızımızın adı Aloy. </p>
@@ -129,7 +137,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/witcher.jpg" class="card-img-top" alt="...">
+                <img src="resim/witcher.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Witcher Wild Hunter 3</h5>
                   <p class="card-text">Roman serisinin ana hikâyesi, Rivyalı Geralt ve Ciri üzerine odaklanır. Geralt ile aralarında kader bağı bulunan Ciri, ülkesinin istila edilmesi ve politikanın ortasında kaldığı için, Geralt tarafından Witcher olarak yetiştirilmek üzere Witcherların kalesi Kaer Morhen'e getirilir.</p>
@@ -139,7 +147,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/detroit.jpg" class="card-img-top" alt="...">
+                <img src="resim/detroit.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Detroit Became Human</h5>
                   <p class="card-text">Oyun Kara, Connor ve Markus adlı üç androidin hikâyesine odaklanmaktadır. Hizmet androidi olan Kara evrilip bilinç sahibi olarak efendisinin kızıyla birlikte kaçmış, bakıcı android Markus kendisini androidlerin özgürlük mücadelesine adamış, Connor ise bilinç sahibi androidleri avlamak üzere görevlendirilmiştir.</p>
@@ -155,7 +163,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/rdr2.jpg" class="card-img-top" alt="...">
+                <img src="resim/rdr2.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Red Dead Redemption 2</h5>
                   <p class="card-text">Red Dead Redemption 2 bir açık dünya oyunudur. Oyunda geçen zaman çetelerin ve silahlı soyguncuların yaşadığı Vahşi Batı döneminin son zamanlarıdır. Ana karakter Arthur Morgan üçüncü ve birinci şahıs bakış açısıyla kontrol edilebilmektedir. Oyun tek oyunculu ve çok oyunculu modları içermektedir.</p>
@@ -165,7 +173,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/second son.jpg" class="card-img-top" alt="...">
+                <img src="resim/second son.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">İnfeamus Second Son</h5>
                   <p class="card-text">Çizgi roman okumayı sever misiniz? Ben bayılırım. Çocukluğumun Şövalyenin Düşüşü ve Superman'in Ölümü'yle geçtiğini düşünecek olursak, kökleri çok derine inen bir tutku bu bendeki. </p>
@@ -175,7 +183,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/spiderman.jpg" class="card-img-top" alt="...">
+                <img src="resim/spiderman.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Spiderman</h5>
                   <p class="card-text">Marvel’s Spider-Man ile oyunculara yepyeni bir Örümcek Adam hikayesi sunuluyor. Henüz 23 yaşında olan Peter Parker, eğitim sürecini staj yaparak sürdürmektedir. </p>
@@ -191,7 +199,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/elden ring.jpg" class="card-img-top" alt="...">
+                <img src="resim/elden ring.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Elden Ring</h5>
                   <p class="card-text">Elden Ring içinde “Dış Tanrı” denilen, yalnızca bahsedildiğini duyduğumuz ve kendisini görmediğimiz Yüce İrade adında bir varlık var. Ayrıca Empyrean olarak adlandırılan bir tür tanrısal insan grubu var ki, bunlar tanrıdan çok insan olmalarına rağmen her an yeryüzünün tanrısı haline gelip dış tanrı olan bu Yüce İrade’nin yeryüzündeki temsilcisi olabilecek varlıklar. </p>
@@ -201,7 +209,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/ratchet.jpg" class="card-img-top" alt="...">
+                <img src="resim/ratchet.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Ratchet And Clank</h5>
                   <p class="card-text">Ratchet, Kaptan Qwark'ın yeni Galaktik Korucusu olacağının hayallerini kurarken de, uzak bir gezegende Savaş Robot'ları yaratılıyordur. Hatalı bir Savaş Robotu'nun üretildiğini fark edilince imha alarmı aktif olur ve böylelikle hatalı robot oradan kaçmaya çalışır.</p>
@@ -211,7 +219,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/watch dogs.jpg" class="card-img-top" alt="...">
+                <img src="resim/watch dogs.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Watch Dogs</h5>
                   <p class="card-text">Aiden Pearce ve ailesi geçmişte birileri tarafından saldırıya uğruyor ve yeğeni Lena ölüyor. Aiden Pearce ise elindeki Profiler adlı cihaz ile şehri bir silah gibi kullanarak saldırganlardan intikam almaya çalışıyor.</p>
