--- a/xbox.html
+++ b/xbox.html
@@ -9,6 +9,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      body{
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-image: url(resim/elden\ ring.jpg);
+      }
+    </style>
 </head>
 <body>
     <div class="sayfa">
@@ -37,7 +45,7 @@
                                 <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="iletişim.html">İletişim</a>
+                                <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -120,7 +128,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/alien.jpg" class="card-img-top" alt="...">
+                <img src="resim/alien.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Alien:İsolation</h5>
                   <p class="card-text">Annesinden uzun zamandır haber alamayan Amanda, karşısına çıkan ilk ipucunu takip ediyor ve devasa boyuttaki uzay gemisi Sevastopol'a giriş yapıyor. Ama ne giriş! Daha ilk dakikada tüm işler berbat oluyor ve yaşamla ölüm arasındaki gerilim dolu bir maceranın içinde buluyoruz kendimizi.</p>
@@ -130,7 +138,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/valhala (1).jpg" class="card-img-top" alt="...">
+                <img src="resim/valhala (1).jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Assasin Creed Valhala</h5>
                   <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler.</p>
@@ -140,7 +148,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/alan wake (1).jpg" class="card-img-top" alt="...">
+                <img src="resim/alan wake (1).jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Alan Wake</h5>
                   <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler.</p>
@@ -157,7 +165,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/call of duty.jpg" class="card-img-top" alt="...">
+                <img src="resim/call of duty.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Call Of Duty Modern warfare</h5>
                   <p class="card-text">Oyunun hikâyesi kurgusal bir yakın gelecekte geçmektedir. Orta Doğu'da bulunan ve ismi belirtilmeyen bir ülkede, radikal bir liderin ülke başkanını öldürerek askerî darbe içerisinde olması ile birlikte; Rusya'daki aşırı milliyetçi yapılanmalarla ortaya çıkan iç savaş olmak üzere iki ayrı konu ele alınmaktadır.</p>
@@ -167,7 +175,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/days gone.jpg" class="card-img-top" alt="...">
+                <img src="resim/days gone.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Days Gone</h5>
                   <p class="card-text">Küresel bir salgının başlamasından iki yıl sonra kıyamet sonrası Oregon'da geçen oyunda eski kanun kaçağı Deacon St. John, karısı Sarah'nın hala hayatta olma olasılığını keşfeder ve bu da Deacon'ı onu bulmak için bir arayışa sokar.</p>
@@ -177,7 +185,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/f1.jpg" class="card-img-top" alt="...">
+                <img src="resim/f1.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">f1 2022</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -194,7 +202,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/detroit.jpg" class="card-img-top" alt="...">
+                <img src="resim/detroit.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Detroit Became Human</h5>
                   <p class="card-text">Oyun Kara, Connor ve Markus adlı üç androidin hikâyesine odaklanmaktadır. Hizmet androidi olan Kara evrilip bilinç sahibi olarak efendisinin kızıyla birlikte kaçmış, bakıcı android Markus kendisini androidlerin özgürlük mücadelesine adamış, Connor ise bilinç sahibi androidleri avlamak üzere görevlendirilmiştir.</p>
@@ -204,7 +212,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/persona-5-persona-series-phantom-thieves-wallpaper-preview.jpg" class="card-img-top" alt="...">
+                <img src="resim/persona-5-persona-series-phantom-thieves-wallpaper-preview.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Persona 5</h5>
                   <p class="card-text">Persona 5, günümüz Tokyo'sunda geçmektedir. Joker takma adıyla bilinen bir lise öğrencisini, haksız yere saldırıyla suçlanıp denetimli serbestliğe tabi tutulduktan sonra yeni bir okula transfer olur. Bir okul yılı boyunca, o ve diğer öğrenciler özel bir gücün farkına varırlar ve Phantom Thieves of Hearts olarak bilinen bir grup gizli infazcı olurlar.</p>
@@ -214,7 +222,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/elden ring.jpg" class="card-img-top" alt="...">
+                <img src="resim/elden ring.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Elden Ring</h5>
                   <p class="card-text">Elden Ring içinde “Dış Tanrı” denilen, yalnızca bahsedildiğini duyduğumuz ve kendisini görmediğimiz Yüce İrade adında bir varlık var. Ayrıca Empyrean olarak adlandırılan bir tür tanrısal insan grubu var ki, bunlar tanrıdan çok insan olmalarına rağmen her an yeryüzünün tanrısı haline gelip dış tanrı olan bu Yüce İrade’nin yeryüzündeki temsilcisi olabilecek varlıklar.</p>
