--- a/aksiyon.html
+++ b/aksiyon.html
@@ -9,6 +9,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      body{
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-image: url(resim/elden\ ring.jpg);
+        background-attachment: fixed;
+      }
+    </style>
 </head>
 <body>
     <div class="sayfa">
@@ -37,7 +45,7 @@
                                 <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="iletişim.html">İletişim</a>
+                                <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -95,7 +103,7 @@
           <div id="carouselExampleAutoplaying" style="max-width: 700px; margin-top: 20px;" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="resim/resident evil.jpg" class="d-block w-100">
+                <img src="resim/calisto.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item">
                 <img src="resim/rdr2.jpg" class="d-block w-100">
@@ -117,12 +125,11 @@
         
 
         <!-- ilk katman içerik -->
-
               <div class="container text-center">
                 <div class="row justify-content-center" style="margin-top: 100px;">
                   <div class="col">
                     <div class="card h-100">
-                      <img src="resim/doom ethernal.jpg" class="card-img-top" alt="...">
+                      <img src="resim/doom ethernal.jpg" class="card-img-top">
                       <div class="card-body">
                         <h5 class="card-title">Doom Ethernal</h5>
                         <p class="card-text">Doom 3'ten (2004) bu yana serideki ilk büyük yapıttır. Oyuncular, Mars'taki enerji madenciliği tesislerinde Union Aerospace Corporation tarafından serbest bırakılan Cehennemden gelen şeytani güçlerle savaşırken, Doom Slayer olarak bilinen isimsiz bir uzay denizcisinin rolünü üstlenirler.</p>
@@ -132,7 +139,7 @@
                   </div>
                   <div class="col">
                     <div class="card h-100">
-                      <img src="resim/calisto.jpg" class="card-img-top" alt="...">
+                      <img src="resim/calisto.jpg" class="card-img-top">
                       <div class="card-body">
                         <h5 class="card-title">Calisto Protocol</h5>
                         <p class="card-text">2320'de Jacob Lee (Josh Duhamel)[4] ve partneri Max Barrow (Jeff Schine) United Jupiter Company (UJC) için sözleşmeli olarak çalışan yük sevkiyatcılarıdır ve UJC Charon gemisinin pilotlarıdır. </p>
@@ -142,7 +149,7 @@
                   </div>
                   <div class="col">
                     <div class="card h-100">
-                      <img src="resim/call of duty.jpg" class="card-img-top" alt="...">
+                      <img src="resim/call of duty.jpg" class="card-img-top">
                       <div class="card-body">
                         <h5 class="card-title">Call Of Duty Modern Warfare</h5>
                         <p class="card-text">Oyunun hikâyesi kurgusal bir yakın gelecekte geçmektedir. Orta Doğu'da bulunan ve ismi belirtilmeyen bir ülkede, radikal bir liderin ülke başkanını öldürerek askerî darbe içerisinde olması ile birlikte; Rusya'daki aşırı milliyetçi yapılanmalarla ortaya çıkan iç savaş olmak üzere iki ayrı konu ele alınmaktadır </p>
@@ -158,7 +165,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/god of war.jpg" class="card-img-top" alt="...">
+                <img src="resim/god of war.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">God Of War</h5>
                   <p class="card-text">Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur.</p>
@@ -168,7 +175,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/crysis.jpg" class="card-img-top" alt="...">
+                <img src="resim/crysis.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Crysis</h5>
                   <p class="card-text">Crysis 'te geçen olaylar Filipin denizindeki Lingshan Adaları üzerinde yakın gelecek kurgusu içerisinde geliştirilmiştir.</p>
@@ -178,7 +185,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/uncharted.jpg" class="card-img-top" alt="...">
+                <img src="resim/uncharted.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Uncharted 4</h5>
                   <p class="card-text">Hazine avcılığından emekli olan Drake, bir anda hırsızların dünyasına geri dönmek zorunda kalır. </p>
@@ -194,7 +201,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/ghost of.png" class="card-img-top" alt="...">
+                <img src="resim/ghost of.png" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Ghost Of Thushima</h5>
                   <p class="card-text">Ghost of Tsushima'nın hikayesi; 13'üncü yüzyıl sonlarına dayanıyor. Ana oyunda, Japonya'nın Tsushima Adası'ndayız ve Moğol işgali kapımıza dayanmış durumda. Moğol lider Hotun Han, tüm kuvvetleriyle saldırırken, anakaradan uzakta bir başına olan Tsushima'nın Şogun'a haber iletecek zamanı ise yok.</p>
@@ -204,7 +211,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/rdr2.jpg" class="card-img-top" alt="...">
+                <img src="resim/rdr2.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Red Dead Redemption 2</h5>
                   <p class="card-text">Red Dead Redemption 2 bir açık dünya oyunudur. Oyunda geçen zaman çetelerin ve silahlı soyguncuların yaşadığı Vahşi Batı döneminin son zamanlarıdır. Ana karakter Arthur Morgan üçüncü ve birinci şahıs bakış açısıyla kontrol edilebilmektedir. Oyun tek oyunculu ve çok oyunculu modları içermektedir.</p>
@@ -214,7 +221,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/resident evil.jpg" class="card-img-top" alt="...">
+                <img src="resim/resident evil.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">resident Evil Village</h5>
                   <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler.</p>
