--- a/bilgisayar.html
+++ b/bilgisayar.html
@@ -8,6 +8,14 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <style>
+    body{
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      background-image: url(resim/elden\ ring.jpg);
+    }
+  </style>
 </head>
 <body>
   <div class="sayfa">
@@ -35,7 +43,7 @@
                 <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="iletişim.html">İletişim</a>
+                <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -121,7 +129,7 @@
       <div class="row justify-content-center" style="margin-top: 100px;">
         <div class="col">
           <div class="card h-100">
-            <img src="resim/doom ethernal.jpg" class="card-img-top" alt="...">
+            <img src="resim/doom ethernal.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Doom Ethernal</h5>
               <p class="card-text">Doom 3'ten (2004) bu yana serideki ilk büyük yapıttır. Oyuncular, Mars'taki enerji madenciliği tesislerinde Union Aerospace Corporation tarafından serbest bırakılan Cehennemden gelen şeytani güçlerle savaşırken, Doom Slayer olarak bilinen isimsiz bir uzay denizcisinin rolünü üstlenirler.</p>
@@ -131,7 +139,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="resim/calisto.jpg" class="card-img-top" alt="...">
+            <img src="resim/calisto.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Calisto Protocol</h5>
               <p class="card-text">2320'de Jacob Lee (Josh Duhamel)[4] ve partneri Max Barrow (Jeff Schine) United Jupiter Company (UJC) için sözleşmeli olarak çalışan yük sevkiyatcılarıdır ve UJC Charon gemisinin pilotlarıdır. </p>
@@ -141,7 +149,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
+            <img src="resim/need for speed.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Need For Speed:Heat</h5>
               <p class="card-text">Amerika'nın Florida eyaletinde ilham alınarak oluşturulan kurgusal şehir Palm City'de hayat buluyor NFS Heat. Ve yasal olarak kabul görmeyen sokak yarışları ve yarışçıları var hikayemizin merkezinde.</p>
@@ -158,7 +166,7 @@
     <div class="row justify-content-center" style="margin-top: 100px;">
       <div class="col">
         <div class="card h-100">
-          <img src="resim/god of war.jpg" class="card-img-top" alt="...">
+          <img src="resim/god of war.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">God Of War</h5>
             <p class="card-text">Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur.</p>
@@ -168,7 +176,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="resim/outlast.jpg" class="card-img-top" alt="...">
+          <img src="resim/outlast.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Outlast</h5>
             <p class="card-text">Oyunda, Miles Upshur adındaki bir serbest çalışan gazetecinin Lake County, Colorado dağlarının derinliklerinde bulunan Mount Massive Asylum isimli garip olaylar olduğu konuşulan bir akıl hastanesini haber yapmak için bir el kamerası ile tek başına girdikten sonra yaşadığı olaylar oynanmaktadır.</p>
@@ -178,7 +186,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="resim/call of duty.jpg" class="card-img-top" alt="...">
+          <img src="resim/call of duty.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Detroit Became Human</h5>
             <p class="card-text">Oyun Kara, Connor ve Markus adlı üç androidin hikâyesine odaklanmaktadır. Hizmet androidi olan Kara evrilip bilinç sahibi olarak efendisinin kızıyla birlikte kaçmış, bakıcı android Markus kendisini androidlerin özgürlük mücadelesine adamış, Connor ise bilinç sahibi androidleri avlamak üzere görevlendirilmiştir.</p>
@@ -194,7 +202,7 @@
     <div class="row justify-content-center" style="margin-top: 100px;">
       <div class="col">
         <div class="card h-100">
-          <img src="resim/elden ring.jpg" class="card-img-top" alt="...">
+          <img src="resim/elden ring.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Elden Ring</h5>
             <p class="card-text">Elden Ring içinde “Dış Tanrı” denilen, yalnızca bahsedildiğini duyduğumuz ve kendisini görmediğimiz Yüce İrade adında bir varlık var. Ayrıca Empyrean olarak adlandırılan bir tür tanrısal insan grubu var ki, bunlar tanrıdan çok insan olmalarına rağmen her an yeryüzünün tanrısı haline gelip dış tanrı olan bu Yüce İrade’nin yeryüzündeki temsilcisi olabilecek varlıklar. </p>
@@ -204,7 +212,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="resim/dying light.jpg" class="card-img-top" alt="...">
+          <img src="resim/dying light.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Dying Light</h5>
             <p class="card-text">Gizli GRE ajanı Kyle Crane, şantaj için kullanan Kadir Süleyman tarafından çalınan hassas bir dosyayı almak için Harran'a havadan bırakılır. Crane, enfekte bir kişi tarafından ısırılır, ancak Jade Aldemir tarafından kurtarılır ve Kule adı verilen hayatta kalan bir sığınağa götürülür.</p>
@@ -214,7 +222,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="resim/little.jpg" class="card-img-top" alt="...">
+          <img src="resim/little.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Little Nightmares</h5>
             <p class="card-text">Normalde oyunlarda hikayeye ve hikaye anlatımına çok önem veririm. Oyun firmalarının kolaya kaçarak her şeyi sembozilm yolu ile anlatması başta bir oyuncu olarak ve daha sonra da bir eleştirmen olarak cidden canımı sıkar. Bir yapımcı sembolizm kullandığında bunu gerçekten kullanmak istedikleri için, atmosfere bir yararı olduğu için kullandıklarını anlarım. Diğerleri ise, yalnızca tembellikten bunu yapar.</p>
