--- a/ps.html
+++ b/ps.html
@@ -9,6 +9,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      body{
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-image: url(resim/elden\ ring.jpg);
+        background-size: cover;
+      }
+    </style>
 </head>
 <body>
     <div class="sayfa">
@@ -37,7 +45,7 @@
                                 <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="iletişim.html">İletişim</a>
+                                <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -119,7 +127,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/god of war.jpg" class="card-img-top" alt="...">
+                <img src="resim/god of war.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">God Of War</h5>
                   <p class="card-text"> Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur.</p>
@@ -129,7 +137,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
+                <img src="resim/need for speed.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Need For Speed:Heat</h5>
                   <p class="card-text">Amerika'nın Florida eyaletinde ilham alınarak oluşturulan kurgusal şehir Palm City'de hayat buluyor NFS Heat. Ve yasal olarak kabul görmeyen sokak yarışları ve yarışçıları var hikayemizin merkezinde.</p>
@@ -139,7 +147,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/calisto.jpg" class="card-img-top" alt="...">
+                <img src="resim/calisto.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Calisto Protocol</h5>
                   <p class="card-text">2320'de Jacob Lee (Josh Duhamel)[4] ve partneri Max Barrow (Jeff Schine) United Jupiter Company (UJC) için sözleşmeli olarak çalışan yük sevkiyatcılarıdır ve UJC Charon gemisinin pilotlarıdır.</p>
@@ -155,7 +163,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/until dawn.jpg" class="card-img-top" alt="...">
+                <img src="resim/until dawn.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Until Dawn</h5>
                   <p class="card-text">Until Dawn, tıpkı Alan Wake gibi dizi şeklinde ilerliyor ve her bölümün sonunda psikoloğun odasında uyanıyoruz. Burada psikolog bize, yani konsol başında oturan oyuncuya sesleniyor. İstediğiniz kadar kıvranın en nihayetinde hayatımız ikili seçimler arasında boğulmaktan ibarettir.</p>
@@ -165,7 +173,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/ghost of.png" class="card-img-top" alt="...">
+                <img src="resim/ghost of.png" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Ghost Of Tsushima</h5>
                   <p class="card-text">Ghost of Tsushima'nın hikayesi; 13'üncü yüzyıl sonlarına dayanıyor. Ana oyunda, Japonya'nın Tsushima Adası'ndayız ve Moğol işgali kapımıza dayanmış durumda. Moğol lider Hotun Han, tüm kuvvetleriyle saldırırken, anakaradan uzakta bir başına olan Tsushima'nın Şogun'a haber iletecek zamanı ise yok.</p>
@@ -175,7 +183,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/second son.jpg" class="card-img-top" alt="...">
+                <img src="resim/second son.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">İnfeamus Second Son</h5>
                   <p class="card-text">Çizgi roman okumayı sever misiniz? Ben bayılırım. Çocukluğumun Şövalyenin Düşüşü ve Superman'in Ölümü'yle geçtiğini düşünecek olursak, kökleri çok derine inen bir tutku bu bendeki.</p>
@@ -191,7 +199,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/for honor(1).jpg" class="card-img-top" alt="...">
+                <img src="resim/for honor(1).jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">For Honor</h5>
                   <p class="card-text">Yıllarca süren savaşlar neticesinde Samuraylar, Vikingler ve şövalyeler kimin galip olduğunu kendilerine bile itiraf edemezler. Şövalyeler sonsuz barış sağlanması için adım atarken, bu üç grubun mücadelesi tarihte her zaman hatırlanacak ve nesillerce akılda kalacak hatıralar bırakacaktır.</p>
@@ -201,7 +209,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/elden ring.jpg" class="card-img-top" alt="...">
+                <img src="resim/elden ring.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Elden Ring</h5>
                   <p class="card-text">Elden Ring içinde “Dış Tanrı” denilen, yalnızca bahsedildiğini duyduğumuz ve kendisini görmediğimiz Yüce İrade adında bir varlık var. Ayrıca Empyrean olarak adlandırılan bir tür tanrısal insan grubu var ki, bunlar tanrıdan çok insan olmalarına rağmen her an yeryüzünün tanrısı haline gelip dış tanrı olan bu Yüce İrade’nin yeryüzündeki temsilcisi olabilecek varlıklar.</p>
@@ -211,7 +219,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/alien.jpg" class="card-img-top" alt="...">
+                <img src="resim/alien.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Alien:İsolation</h5>
                   <p class="card-text">Annesinden uzun zamandır haber alamayan Amanda, karşısına çıkan ilk ipucunu takip ediyor ve devasa boyuttaki uzay gemisi Sevastopol'a giriş yapıyor. Ama ne giriş! Daha ilk dakikada tüm işler berbat oluyor ve yaşamla ölüm arasındaki gerilim dolu bir maceranın içinde buluyoruz kendimizi.</p>
