--- a/yarıs.html
+++ b/yarıs.html
@@ -8,6 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      body{
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-image: url(resim/elden\ ring.jpg);
+        background-size: cover;
+      }
+    </style>
 </head>
 <body>
     <div class="sayfa">
@@ -36,7 +44,7 @@
                                 <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="iletişim.html">İletişim</a>
+                                <a class="nav-link" href="iletişim.html">Destek Ve İletişim</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -119,7 +127,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/forza.jpg" class="card-img-top" alt="...">
+                <img src="resim/forza.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Forza Horizon 4</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -129,7 +137,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
+                <img src="resim/need for speed.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Need For Speed:Heat</h5>
                   <p class="card-text">Amerika'nın Florida eyaletinde ilham alınarak oluşturulan kurgusal şehir Palm City'de hayat buluyor NFS Heat. Ve yasal olarak kabul görmeyen sokak yarışları ve yarışçıları var hikayemizin merkezinde.</p>
@@ -139,7 +147,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/mario.jpg" class="card-img-top" alt="...">
+                <img src="resim/mario.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Mario Kart 8 Deluxe</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -156,7 +164,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/wreckfest.jpg" class="card-img-top" alt="...">
+                <img src="resim/wreckfest.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Wreckfest</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -166,7 +174,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/f1.jpg" class="card-img-top" alt="...">
+                <img src="resim/f1.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">F1 2022</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -176,7 +184,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/gran.jpg" class="card-img-top" alt="...">
+                <img src="resim/gran.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Gran Turismo Sport</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -192,7 +200,7 @@
           <div class="row justify-content-center" style="margin-top: 100px;">
             <div class="col">
               <div class="card h-100">
-                <img src="resim/project.jpg" class="card-img-top" alt="...">
+                <img src="resim/project.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Project CARS 2</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -202,7 +210,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/wrc.jpg" class="card-img-top" alt="...">
+                <img src="resim/wrc.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">WRC 9</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -212,7 +220,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="resim/roket.jpg" class="card-img-top" alt="...">
+                <img src="resim/roket.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Roket League</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
